# kn-rag-chatbot

./: .dockerignore  .env  .env.local  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
app/: config.py  document.py  main.py  rag_agent.py  utils.py
app/model/: RagRequest.py
app/route/: kb.py  rag.py
app/service/: kb_service.py  rag_service.py
db/: Chinh_sach_hoc_bong_va_ho_tro.md  Tai_sao_chon_DLA.md
db/raw/: Hoc_phi.md  data.md
tests/: test_app.py
ui/: main.py
